@@ -2,7 +2,6 @@
 
 package de.monticore.codegen.mc2cd.transl;
 
-import de.monticore.cd4analysis.CD4AnalysisMill;
 import de.monticore.cdbasis._ast.*;
 import de.monticore.cdinterfaceandenum._ast.*;
 import de.monticore.codegen.mc2cd.MC2CDStereotypes;
@@ -11,9 +10,7 @@ import de.monticore.grammar.grammar._ast.*;
 import de.monticore.utils.Link;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 /**
  * Checks if the source rules were extending other rules and sets the super
@@ -56,7 +53,8 @@ public class DeprecatedTranslation implements
 
   protected void translateProd(ASTProd prod, ASTCDType cdType,
                                ASTMCGrammar astGrammar) {
-    List<ASTGrammarAnnotation> annos = prod.getGrammarAnnotationList().stream().filter(a -> a.isDeprecated()).collect(Collectors.toList());
+    List<ASTGrammarAnnotation> annos = prod.getGrammarAnnotationList().stream().filter(
+        ASTGrammarAnnotation::isDeprecated).toList();
     String message;
     if (annos.isEmpty()) {
       if (!astGrammar.isPresentGrammarAnnotation() || !astGrammar.getGrammarAnnotation().isDeprecated()) {
@@ -64,7 +62,7 @@ public class DeprecatedTranslation implements
       }
       message = astGrammar.getGrammarAnnotation().isPresentMessage()?astGrammar.getGrammarAnnotation().getMessage():"";
     } else {
-      message = annos.get(0).isPresentMessage()?astGrammar.getGrammarAnnotation().getMessage():"";
+      message = annos.getFirst().isPresentMessage() ? astGrammar.getGrammarAnnotation().getMessage() : "";
     }
     if (!message.isEmpty()) {
       TransformationHelper.addStereoType(cdType, MC2CDStereotypes.DEPRECATED.toString(),
