@@ -55,7 +55,7 @@ public class ExpressionBasisTypeIdAsConstructorTypeVisitor
                 c -> true
             );
         if (constructors.size() == 1) {
-          exprType = Optional.of(constructors.get(0));
+          exprType = Optional.of(constructors.getFirst());
         }
         else if (constructors.size() > 1) {
           exprType = Optional.of(SymTypeExpressionFactory.createIntersection(constructors));
