@@ -35,11 +35,11 @@ public class OverridingNTsHaveNoSuperRules implements GrammarASTClassProdCoCo {
     if (!a.getSuperRuleList().isEmpty() || !a.getASTSuperClassList().isEmpty()) {
       String extendedType;
       if (!a.getSuperRuleList().isEmpty()){
-        extendedType = a.getSuperRuleList().get(0).getName();
+        extendedType = a.getSuperRuleList().getFirst().getName();
       }
       else{
         extendedType = MCSimpleGenericTypesMill
-            .prettyPrint(a.getASTSuperClassList().get(0), false).trim();
+            .prettyPrint(a.getASTSuperClassList().getFirst(), false).trim();
       }
       for (MCGrammarSymbol s : grammarSymbols) {
         if (s.getProd(a.getName()).isPresent()) {
