@@ -1,46 +1,36 @@
 /* (c) https://github.com/MontiCore/monticore */
 package mc.feature.parserinfo;
 
-import de.se_rwth.commons.logging.LogStub;
+import de.monticore.runtime.junit.AbstractMCTest;
 import mc.feature.parserinfo.parserinfosimpleinheritancetest._parser._auxiliary.ParserInfoSimpleInheritanceTestParserInfoForParserInfoTest;
 import mc.feature.parserinfo.parserinfotest._parser.ParserInfoTestParserInfo;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.Parameter;
+import org.junit.jupiter.params.ParameterizedClass;
+import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static org.junit.Assert.*;
-import de.se_rwth.commons.logging.Log;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Test the generated ParserInfo classes.
  * Since the concrete antlr state numbers are not stable, we must always check a range of state numbers.
  */
-@RunWith(Parameterized.class)
-public class ParserInfoTest {
+@ParameterizedClass
+@ValueSource(booleans =  {true, false})
+public class ParserInfoTest extends AbstractMCTest {
+    @Parameter
     private boolean useSimpleInheritance;
-
-    @Parameterized.Parameters
-    public static Collection<Object[]> data(){
-        return Arrays.asList(new Boolean[]{false}, new Boolean[]{true});
-    }
-
-    public ParserInfoTest(boolean useSimpleInheritance){
-        this.useSimpleInheritance = useSimpleInheritance;
-    }
 
     // The generated parser has around 125 states
     // => add some safety margin
     private final int MAX_STATE_NUMBER = 250;
 
-    @Before
+    @BeforeEach
     public void init(){
         if(useSimpleInheritance){
             ParserInfoTestParserInfo.initMe(new ParserInfoSimpleInheritanceTestParserInfoForParserInfoTest());
@@ -49,25 +39,18 @@ public class ParserInfoTest {
         }
     }
     
-    @Before
-    public void before() {
-        LogStub.init();
-        Log.enableFailQuick(false);
-    }
-    
     @Test
     public void testNoRef() {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameUsageName1)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(1, states.size());
 
-        int s = states.get(0);
+        int s = states.getFirst();
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
-        assertTrue(Log.getFindings().isEmpty());
     }
 
     @Test
@@ -75,14 +58,13 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameUsageName2)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(1, states.size());
 
-        int s = states.get(0);
+        int s = states.getFirst();
         assertTrue(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
-        assertTrue(Log.getFindings().isEmpty());
     }
 
     @Test
@@ -90,14 +72,13 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameRefA)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(1, states.size());
 
-        int s = states.get(0);
+        int s = states.getFirst();
         assertTrue(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
-        assertTrue(Log.getFindings().isEmpty());
     }
 
     @Test
@@ -105,14 +86,13 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameRefB)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(1, states.size());
 
-        int s = states.get(0);
+        int s = states.getFirst();
         assertFalse(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
         assertTrue(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
-        assertTrue(Log.getFindings().isEmpty());
     }
 
     @Test
@@ -120,7 +100,7 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameUsageNameForList1)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         // '(a || ",")+' is replaced with 'a ("," a)*'
         assertEquals(2, states.size());
@@ -129,7 +109,6 @@ public class ParserInfoTest {
             assertTrue(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
             assertFalse(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
         }
-        assertTrue(Log.getFindings().isEmpty());
     }
 
     @Test
@@ -137,7 +116,7 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                 .filter(ParserInfoTestParserInfo::stateHasUsageNameUsageNameForList2)
                 .boxed()
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(2, states.size());
 
@@ -145,7 +124,6 @@ public class ParserInfoTest {
             assertTrue(ParserInfoTestParserInfo.stateReferencesElementASymbol(s));
             assertFalse(ParserInfoTestParserInfo.stateReferencesElementBSymbol(s));
         }
-        assertTrue(Log.getFindings().isEmpty());
     }
 
     @Test
@@ -154,7 +132,7 @@ public class ParserInfoTest {
             List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                     .filter(ParserInfoTestParserInfo::stateReferencesElementASymbol)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
 
             assertFalse(states.isEmpty());
         }
@@ -170,11 +148,10 @@ public class ParserInfoTest {
             List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
                     .filter(ParserInfoTestParserInfo::stateReferencesElementASymbol)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
 
             assertTrue(states.isEmpty());
         }
-        assertTrue(Log.getFindings().isEmpty());
     }
 
     @Test
@@ -182,7 +159,7 @@ public class ParserInfoTest {
         List<Integer> states = IntStream.range(0, MAX_STATE_NUMBER)
             .filter(ParserInfoTestParserInfo::stateDefinesName)
             .boxed()
-            .collect(Collectors.toList());
+            .toList();
 
         // ElementA to D are symbols and therefore define names
         assertEquals(4, states.size());
@@ -199,7 +176,6 @@ public class ParserInfoTest {
             assertFalse(ParserInfoTestParserInfo.stateReferencesElementASymbol(state));
             assertFalse(ParserInfoTestParserInfo.stateReferencesElementBSymbol(state));
         });
-        assertTrue(Log.getFindings().isEmpty());
     }
 
 }
